infra/k8s-dev/ingress-rpcnode-configmap.yaml
apiVersion: v1
kind: Service
metadata:
  name: testnet-rpcnode
  labels:
    app: rpcnode
  namespace: testnet
spec:
  selector:
    app: rpcnode
  type: LoadBalancer
  ports:
    - port: 8545
      targetPort: 8545
      protocol: TCP
      name: json-rpc
    - port: 8546
      targetPort: 8546
      protocol: TCP
      name: ws
    - port: 8547
      targetPort: 8547
      protocol: TCP
      name: graphql
