infra/k8s-dev/ingress-blockscout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cakeshop
  namespace: testnet
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: blockscout.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blockscout
            port:
              number: 4000
