infra/k8s-dev/ingress-configmap.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: testnet
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: testnet-rpcnode
spec:
  rules:
  - host: rpc.testnet.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testnet-rpcnode
            port:
              number: 8545
  - host: ws.testnet.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testnet-rpcnode
            port:
              number: 8546
  - host: graphql.testnet.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testnet-rpcnode
            port:
              number: 8547
