infra/k8s-dev/ingress-lite-explorer-configmap.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lite-explorer
  namespace: testnet
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: lite-explorer.testnet.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lite-explorer
            port:
              number: 80
